# Project1

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
examples/: basic_usage.py
src/s3_insight/: __init__.py  aggregate.py  charts.py  cli.py  formats.py  inventory.py  publish.py  utils.py
tests/: __init__.py  test_aggregate.py  test_inventory.py
